<resources>
    <string name="app_name">ГЛУЛ: Мобильная бригада</string>
    <string name="task_text">Введите данные оборудования</string>
    <string name="sign_in">Войти</string>
    <string name="load_data">Загрузить список оборудования</string>
    <string name="enabled">Принять</string>
    <string name="disabled">Изменить</string>
    <string name="add_data">Добавить в БД</string>
    <string name="go_to_op">Перейти к окну оператора</string>
    <string name="date">Введите дату отчета, который необходимо просмотреть</string>
    <string name="search">Найти</string>
    <string name="send">Сохранить отчет</string>
    <string name="go_to_otchet">Перейти к окну отчетов</string>
<<<<<<< HEAD
    <string name="about">О программе</string>
    <string name="spravka">Справка</string>
    <string name="about_text">"ГЛУЛ: Мобильная бригада" - это приложение, разработанное для оперативной фиксации и отслеживания неисправностей оборудования. Предназначенное для использования бригадами технического обслуживания, приложение обеспечивает эффективное ведение журнала неисправностей. \n\n
        Приложение "ГЛУЛ: Мобильная бригада" решает проблемы эффективного управления неисправностями оборудования, улучшая оперативность реагирования на проблемы и обеспечивая более быстрое и качественное обслуживание техники.\n\n
        Разработчик: EZH\n\n
        Версия: 1.0</string>
    <string name="spravka_text">Справка\n\n
    Для операторов:\n
    1) Загрузить список оборудования с помощью кнопки\n
    2) Пройтись по списку и отметить модули оьорудования, которые в норме\n
    3) Сохранить отчет с помощью кнопки или перейти к окну отчетов с помощью другой кнопки\n
    4) Чтобы просмотреть отчет, необходимо ввести его дату по образцу, который будет указан в окне\n\n
    Для администраторов:\n
    1) Ввести данные об оборудовании в текстовые поля\n
    2) Нажать на кнопку "Добавить в БД", чтобы занести оборудование в базу данных\n
    3) Перейти к окну оператора с помощью кнопки "Перейти к окну оператора"</string>
</resources>
=======
</resources>
>>>>>>> 9152da64e520aba5e9e72feb885d14591f89dc8a
