<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/BackAA"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/titleAA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:paddingEnd="40dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/taskAA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/task_text"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/titleEquipAA"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="text"
        android:hint="Название оборудования" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/add_data" />

    <Button
        android:id="@+id/goBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/go_to_op" />
</LinearLayout>