<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OperatorActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/BackOA"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/imageViewAA"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:paddingEnd="40dp"
            android:src="@drawable/gsb_logo" />

    </LinearLayout>

    <TextView
        android:id="@+id/taskOA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/quicksand"
        android:text="Окно оператора"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/load_data" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/equipListOA"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="10dp">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:text="@string/go_to_otchet"
            android:visibility="gone" />

        <Button
            android:id="@+id/saveBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand"
            android:text="@string/send"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>